# wasm-mandelbrot

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: lib.rs
static/: index.html
