
[package]
name = "wasm-mandelbrot"
version = "0.1.0"
categories = ["wasm"]
description = "Wasm calculates mandelbrot set"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.22"
serde = {version = "1.0.137", features = ["derive"]}
wasm-bindgen = {version = "0.2.81", features = ["serde-serialize"]}
web-sys = {version = "0.3.58", features = ["CanvasRenderingContext2d", "ImageData", "HtmlCanvasElement"]}

